fixed some alignment and js bugs

--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,20 @@ ul {
 	align-content:center;
 	align-items: center;
 	justify-content: center;
-	width:60%;
+	width:80%;
 	height:10rem;
 	margin:0 auto;
 	font-size:2rem;
 	font-family: 'Lobster', cursive;
+	flex-wrap:wrap;
 }
 
+.item-to-add-text, .estimated-price-text {
+	width:40%;
+	margin-bottom:-.3rem;
 
+
+}
 
 .reset-list {
 	float:right;
